# cpp-winrt-com

./: CMakeLists.txt  MyInterface.idl  client.cpp  clsid.h  main.cpp  server.cpp  serverInstaller.cpp
.github/workflows/: cmake-multi-platform.yml
